--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -25,7 +25,8 @@
     "/chains",
     "/connectors",
     "/nuxt",
-    "/query"
+    "/query",
+    "/codegen"
   ],
   "sideEffects": false,
   "type": "module",
@@ -61,6 +62,10 @@
       "types": "./dist/types/exports/query.d.ts",
       "default": "./dist/esm/exports/query.js"
     },
+    "./codegen": {
+      "types": "./dist/types/exports/codegen.d.ts",
+      "default": "./dist/esm/exports/codegen.js"
+    },
     "./package.json": "./package.json"
   },
   "typesVersions": {
@@ -69,7 +74,8 @@
       "chains": ["./dist/types/exports/chains.d.ts"],
       "connectors": ["./dist/types/exports/connectors.d.ts"],
       "nuxt": ["./dist/types/exports/nuxt.d.ts"],
-      "query": ["./dist/types/exports/query.d.ts"]
+      "query": ["./dist/types/exports/query.d.ts"],
+      "codegen": ["./dist/types/exports/codegen.d.ts"]
     }
   },
   "peerDependencies": {
